# notes

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile  plan.txt  todos.txt
src/: cache.c  cache.h  cache.rs  clap_app.rs  config.c  config.h  config.rs  config_parser.c  main.rs  note.rs  notes.c  paths.rs  request.rs  utilities.c  utilities.h  utils.rs
