[package]
name = "notes"
version = "0.1.0"
authors = ["dv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dirs = "3.0.2"
clap = "2.33.3"
tempfile = "3"
toml = "0.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"
fehler = "1.0.0"
